[gd_scene load_steps=3 format=2]

[ext_resource path="res://items/DropItem.tscn" type="PackedScene" id=1]
[ext_resource path="res://items/SmallHeart.gd" type="Script" id=2]

[node name="SmallHeart" type="Node2D"]
script = ExtResource( 2 )

[node name="DropItem" parent="." instance=ExtResource( 1 )]
frame = 27

[node name="RigidBody2D" parent="DropItem" index="0"]
gravity_scale = 0.25
contacts_reported = 1
contact_monitor = true

[node name="Sprite" parent="DropItem/RigidBody2D" index="1"]
frame = 27

[node name="Timer" type="Timer" parent="."]
wait_time = 0.8
autostart = true

[connection signal="pickup" from="DropItem" to="." method="_on_DropItem_pickup"]
[connection signal="body_entered" from="DropItem/RigidBody2D" to="." method="_on_RigidBody2D_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]

[editable path="DropItem"]
